websites/HyrxMQ/deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hyrxmq-website
  labels:
    app.kubernetes.io/name: hyrxmq-website
    app.kubernetes.io/part-of: hyrx
