websites/HyrxMQ/deploy/k8s/prod-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hyrxmq-website
  namespace: public-websites
  labels:
    app: hyrxmq-website
spec:
  type: ClusterIP
  selector:
    app: hyrxmq-website
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
